--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = "4.5.23"
+indexmap = { version = "2.7.0", features = ["serde"] }
 regex-syntax = "0.8.5"
 serde_yaml = "0.9.34"
