--- a/examples/simple-parser/Cargo.toml
+++ b/examples/simple-parser/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "sample_program"
+name = "simple-parser"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 clap = "4.5.23"
-log-surgeon = { path = ".." }
+log-surgeon = { path = "../.." }
